cleanup v1 legacy